add explanation why hack in tl_if_head_eq_meaning:nN is fine

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3113,7 +3113,8 @@
 %   the normal case, use \cs{tl_head:w}, with no \cs{exp_not:N} this
 %   time, since \cs{if_meaning:w} causes no expansion.  With an empty
 %   argument, the test is \texttt{true}, and \cs{use_none:nnn} removes
-%   |#2| and the usual \cs{prg_return_true:} and \cs{else:}.
+%   |#2| and \cs{prg_return_true:} and \cs{else:} (it is safe this way here as
+%   in this case \cs{prg_new_conditional:Npnn} didn't optimize these two away).
 %   In the special cases, we know that the first token is a character,
 %   hence \cs{if_charcode:w} and \cs{if_catcode:w} together are enough.
 %   We combine them in some order, hopefully faster than the reverse.
