Add tests for DeviceN color space creation
With the usual minor code adjustments!

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -756,6 +756,8 @@
       }
 %</luatex|pdftex>
   }
+\cs_if_exist:NF \pdf_object_now:nn
+  { \cs_gset_protected:Npn \@@_backend_devicen_init:nnn #1#2#3 { } }
 \cs_new:Npn \@@_backend_devicen_init:w #1 ~ #2 \s_@@_stop
   {
     + 1
