--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -1909,11 +1909,11 @@
             \tl_if_empty:NTF \l_@@_model_tl
               { \tl_set_eq:NN \l_@@_model_tl \l_@@_internal_tl }
               {
-                \tl_if_eq:NNF \l_@@_model_tl \l_@@_internal_tl
+                \str_if_eq:VVF \l_@@_model_tl \l_@@_internal_tl
                   {
                     \__kernel_msg_error:nnn { color }
                       { DeviceN-inconsistent-alternative }
-                      {#1}
+                      {#2}
                     \clist_map_break:n { \use_none:nnnnn }
                   }
                }
@@ -2025,21 +2025,21 @@
           \@@_parse_number:n {##4}
         }
       }
-  \cs_new_eq:cN { @@_parse_mix_ #1 :nw  } \@@_parse_mix_cmyk:nw
+  \cs_new_eq:cN { @@_parse_mix_ #1 :nw } \@@_parse_mix_cmyk:nw
   }
 \cs_new_protected:Npn \@@_model_devicen_parse_generic:nn #1#2
   {
     \cs_new:cpn { @@_parse_model_ #1 :w  } ##1 , ##2 \s_@@_stop
       {
         {#1}
-        { \@@_model_devicen_parse:nw {#2} ##2 , \q_nil , \s_@@_stop }
+        { \@@_model_devicen_parse:nw {#2} ##1 , ##2 , \q_nil , \s_@@_stop }
       }
     \cs_new:cpx { @@_parse_mix_ #1 :nw }
       ##1 ##2 \s_@@_mark ##3 \s_@@_stop
       {
         \exp_not:N \@@_model_devicen_mix:nw {##1}
-          ##2 \exp_not:N \q_nil \c_space_tl \exp_not:N \s_@@_mark
-          ##3 \exp_not:N \q_nil \c_space_tl \exp_not:N \s_@@_stop
+          ##2 \c_space_tl \exp_not:N \q_nil \c_space_tl \exp_not:N \s_@@_mark
+          ##3 \c_space_tl \exp_not:N \q_nil \c_space_tl \exp_not:N \s_@@_stop
       }
   }
 \cs_new:Npn \@@_model_devicen_parse:nw #1#2 , #3 \s_@@_stop
