don't use exp_not:o in tl_trim_spaces:n

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2705,11 +2705,16 @@
 %   \meta{continuation}, which receives as a braced argument
 %   \cs{@@_trim_mark:} \meta{trimmed token list}.  The control sequence
 %   \cs{@@_trim_mark:} expands to nothing in a single expansion.  In the case
-%   at hand, we take \cs{exp_not:o} as our continuation, so that space
-%   trimming behaves correctly within an \texttt{x}-type expansion.
+%   at hand, we take \cs{__kernel_exp_not:w} \cs{exp_after:wN} as our
+%   continuation, so that space trimming behaves correctly within an
+%   \texttt{x}-type expansion.
 %    \begin{macrocode}
 \cs_new:Npn \tl_trim_spaces:n #1
-  { \@@_trim_spaces:nn { \@@_trim_mark: #1 } \exp_not:o }
+  {
+    \@@_trim_spaces:nn
+      { \@@_trim_mark: #1 }
+      { \__kernel_exp_not:w \exp_after:wN }
+  }
 \cs_generate_variant:Nn \tl_trim_spaces:n { o }
 \cs_new:Npn \tl_trim_spaces_apply:nN #1#2
   { \@@_trim_spaces:nn { \@@_trim_mark: #1 } { \exp_args:No #2 } }
