--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2062,7 +2062,7 @@
   }
 \cs_new:Npn \@@_replace_next_aux:w
   {
-    \@@_replace_next:w {} {} 
+    \@@_replace_next:w {} {}
   }
 \cs_new_eq:NN \@@_replace_wrap:w ?
 \cs_new_eq:NN \@@_replace_next:w ?
@@ -2994,7 +2994,7 @@
 \cs_new:Npn \@@_if_head_eq_meaning_normal:nN #1 #2
   {
     \exp_after:wN \if_meaning:w
-        \@@_tl_head:w #1 { ?? \use_none:nnn } \s_@@_stop #2
+        \@@_tl_head:w #1 { !? } \s_@@_stop #2
       \prg_return_true:
     \else:
       \prg_return_false:
@@ -3082,7 +3082,7 @@
     \tl_if_empty:oTF { #1 }
       { f \exp_after:wN \use_none:nn }
       { \exp_after:wN \@@_if_head_is_N_type_auxii:n }
-    \exp_after:wN { \if_false: } \fi: 
+    \exp_after:wN { \if_false: } \fi:
   }
 \cs_new:Npn \@@_if_head_is_N_type_auxii:n #1
   { \exp_after:wN \use_none:n \exp_after:wN }
