revert tl_if_head_eq_meaning:nN changes

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2994,7 +2994,7 @@
 \cs_new:Npn \@@_if_head_eq_meaning_normal:nN #1 #2
   {
     \exp_after:wN \if_meaning:w
-        \@@_tl_head:w #1 { !? } \s_@@_stop #2
+        \@@_tl_head:w #1 { ?? \use_none:nnn } \s_@@_stop #2
       \prg_return_true:
     \else:
       \prg_return_false:
