Fix LuaTeX's strcmp after \endinput
(fixes #813)

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1464,12 +1464,17 @@
 %   Here \enquote{smaller} refers to codepoint order which does not correspond to
 %   the user expected order for most non-ASCII strings.
 %    \begin{macrocode}
+local minus_tok = token.new(string.byte'-', 12)
+local zero_tok = token.new(string.byte'0', 12)
+local one_tok = token.new(string.byte'1', 12)
 luacmd('tex_strcmp:D', function()
   local first = scan_string()
   local second = scan_string()
-  write(first == second and '0'
-     or first < second and '-1'
-     or '1')
+  if first < second then
+    put_next(minus_tok, one_tok)
+  else
+    put_next(first == second and zero_tok or one_tok)
+  end
 end, 'global')
 %    \end{macrocode}
 % \end{macro}
