Add a missing macrocode line

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -852,6 +852,7 @@
         \@@_expand_loop:w 
       }
   }
+%    \end{macrocode}
 %   Next we exclude math commands: this is mainly as there \emph{might} be an
 %   \cs{ensuremath}. We also handle accents, which are basically the same issue
 %   but are kept separate for semantic reasons.
