--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -766,7 +766,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\c_document_cctab, \c_other_cctab}
+% \begin{variable}{\c_code_cctab, \c_document_cctab}
 %  To pick up document-level category codes, we need to delay set up to the
 %  end of the format, where that's possible. Also, as there are a \emph{lot}
 %  of category codes to set, we avoid using the official interface and store the
