Top half of 8-bit range should be active for pdfTeX, etc. (fixes #814)

--- a/l3kernel/l3cctab.dtx
+++ b/l3kernel/l3cctab.dtx
@@ -808,6 +808,9 @@
       \char_set_catcode_group_end:n        { 125 } % right brace
       \char_set_catcode_space:n            { 126 } % tilde
       \char_set_catcode_invalid:n          { 127 } % ^^?
+      \bool_lazy_or:nnF
+        { \sys_if_engine_xetex_p: } { \sys_if_engine_luatex_p: }
+        { \int_step_function:nnN { 128 } { 255 } \char_set_catcode_active:n }
       \@@_gset:n { \c_code_cctab }
     \group_end:
     \cctab_const:Nn \c_document_cctab
