Further \rule:nnn improvements (see #815)

--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -1281,15 +1281,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \rule:nnn #1#2#3
   {
-    \mode_leave_vertical:
-    \hbox:n
-      {
-        \tex_vrule:D
-          height \dim_eval:n {#2} \exp_stop_f:
-          depth  \dim_eval:n {#3} \exp_stop_f:
-          width  \dim_eval:n {#1} \exp_stop_f:
-          \scan_stop:
-      }
+    \tex_vrule:D
+      height \dim_eval:n {#2} \exp_stop_f:
+      depth  \dim_eval:n {#3} \exp_stop_f:
+      width  \dim_eval:n {#1} \exp_stop_f:
+      \scan_stop:
   }
 \cs_new_protected:Npn \rule_horizontal:nn #1#2
   {
@@ -1431,11 +1427,11 @@
 % \end{macro}
 %
 % \begin{macro}{\rule}
-
 %    \begin{macrocode}
 \RenewDocumentCommand \rule { O { 0pt } m m }
   {
     \mode_leave_vertical:
+    \hbox:n { \rule:nnn {#2} { #3 + #1 } { -#1 } }
   }
 %    \end{macrocode}
 % \end{macro}
