--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -1488,6 +1488,9 @@
         { 03E0 } { 03E1 }
         \q_recursion_tail ?
         \q_recursion_stop
+%    \end{macrocode}
+% Odds and ends that are not simple one-to-one mappings.
+%    \begin{macrocode}
       \cs_set_protected:Npn \@@_tmp:w #1#2#3
         {
           \group_begin:
