--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -1515,7 +1515,7 @@
         \q_recursion_tail ?
         \q_recursion_stop
 %    \end{macrocode}
-% Odds and ends for Greek; mainly symbols that are for compatiblity,
+% Odds and ends for Greek; mainly symbols that are for compatibility,
 % but also things like the terminal sigma. Almost all are uppercase
 % mappings, but there is one that is not!
 %    \begin{macrocode}
