--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -1292,7 +1292,9 @@
 % \end{variable}
 %
 % For $8$-bit engines we now need to define the case-change data for
-% the multi-octet mappings. These need a list of what code points are
+% the multi-octet mappings. This data is here not in the \pkg{char} module
+% as the multi-byte nature means they are never |N|-type.
+% These need a list of what code points are
 % doable in |T1| so the list is hard coded (there's no saving in loading
 % the mappings dynamically). All of the straight-forward ones have two
 % octets, so that is taken as read.
@@ -1605,7 +1607,7 @@
       \@@_tmp:w { 03F5 } { 0395 } { upper }
 %    \end{macrocode}
 % Odds and ends that are not simple one-to-one mappings. These
-% are still two-octet codepoints.
+% are still two-octet code points.
 %    \begin{macrocode}
       \cs_set_protected:Npn \@@_tmp:w #1#2#3
         {
@@ -1629,7 +1631,7 @@
       \@@_tmp:w { 00DF } { Ss } { title }
       \@@_tmp:w { 0131 } { I }  { upper }
 %    \end{macrocode}
-% Greek support: the three-octet codepoints.
+% Greek support: the three-octet code points.
 %    \begin{macrocode}
       \cs_set_protected:Npn \@@_tmp:nnnnnn #1#2#3#4#5#6#7
         {
