--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -752,16 +752,28 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_change_case_upper_el:nnnN}
-% \begin{macro}[EXP]{\@@_change_case_upper_el:nnnn}
-% \begin{macro}[EXP]{\@@_change_case_upper_el_aux:nnnN}
-% \begin{macro}[EXP]{\@@_change_case_upper_el_loop:nnw}
-% \begin{macro}[EXP]{\@@_change_case_upper_el:nnN}
-% \begin{macro}[EXP]{\@@_change_case_if_greek:nTF}
+% \begin{macro}[EXP]{\@@_change_case_upper_el:nnn}
+% \begin{macro}[EXP]{\@@_change_case_upper_el:nnNw}
+% \begin{macro}[EXP]{\@@_change_case_upper_el:NnnN}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_dialytika:nnN}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_dialytika:N}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_hiatus:nnNw}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_hiatus:nnN}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_gobble:nnw}
+% \begin{macro}[EXP]{\@@_change_case_upper_el_gobble:nnN}
+% \begin{macro}[EXP,TF]{\@@_change_case_if_greek:n}
+% \begin{macro}[EXP,pTF]{\@@_change_case_if_greek:n}
+% \begin{macro}[EXP,pTF]{\@@_change_case_if_greek_accent:n}
+% \begin{macro}[EXP,pTF]{\@@_change_case_if_greek_diacritic:n}
+% \begin{macro}[EXP,TF]{\@@_change_case_if_takes_dialytika:n}
 %   For Greek uppercasing, we need to know if characters \emph{in the Greek
 %   range} have accents. That means doing a \textsc{nfd} conversion first, then
 %   starting a search. As described by the Unicode \textsc{cldr}, Greek accents
 %   need to be found \emph{after} any U+0308 (diaeresis) and are done in two
-%   groups to allow for the canonical ordering.
+%   groups to allow for the canonical ordering. The implementation here follows
+%   the data and examples from ICU
+%   (\url{https://sites.google.com/site/icusite/design/case/greek-upper}),
+%   although necessarily the implementation is somewhat different.
 %    \begin{macrocode}
 \bool_lazy_or:nnT
   { \sys_if_engine_luatex_p: }
@@ -771,76 +783,136 @@
       {
         \@@_change_case_if_greek:nTF { `#4 }
           {
-            \exp_args:Ne \@@_change_case_upper_el:nnnn
-              { \char_to_nfd:N #4 } {#1} {#2} {#3}
+            \exp_args:Ne \@@_change_case_upper_el:nnn
+              { \char_to_nfd:N #4 } {#2} {#3}
           }
           { \@@_change_case_char:nnnN {#1} {#2} {#3} #4 }
       }
-    \cs_new:Npn \@@_change_case_upper_el:nnnn #1#2#3#4
-      { \@@_change_case_upper_el_aux:nnnN {#2} {#3} {#4} #1 }
-    \cs_new:Npn \@@_change_case_upper_el_aux:nnnN #1#2#3#4
+    \cs_new:Npn \@@_change_case_upper_el:nnn #1#2#3
+      { \@@_change_case_upper_el:nnNw {#2} {#3} #1 }
+%    \end{macrocode}
+%   At this stage we have the first NFD codepoint as |#3|. What we need to know
+%   is whether after that we have another character token, either from the NFD or
+%   directly in the input. If not, we store the changed character at this stage.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_change_case_upper_el:nnNw #1#2#3#4 \q__text_recursion_stop
       {
-        \@@_change_case_store:e { \use:c { char_ #1 case:N } #4 }
-        \@@_change_case_upper_el_loop:nnw {#2} {#3}
-      }
-    \cs_new:Npn \@@_change_case_upper_el_loop:nnw
-      #1#2#3 \q_@@_recursion_stop
-      {
-        \tl_if_head_is_N_type:nTF {#3}
-          { \@@_change_case_upper_el:nnN }
-          { \@@_change_case_loop:nnw }
-            {#1} {#2} #3 \q_@@_recursion_stop
+        \tl_if_head_is_N_type:nTF {#4}
+          { \@@_change_case_upper_el:NnnN #3 }
+          {
+            \@@_change_case_store:e { \char_uppercase:N #3 }
+            \@@_change_case_loop:nnw
+          }
+            {#1} {#2} #4 \q__text_recursion_stop
       }
 %    \end{macrocode}
-%   In addition to the Greek accents, we list three cases here where an
-%   accent outside the Greek range has a \text{nfd} that would make it
-%   equivalent. That includes U+0344, which has to insert U+0308.
+%   Now, we check the detail of the next codepoint: again we filter out the
+%   not-a-char cases, before checking if it's an dialytika, accent or diacritic.
+%   (The latter do not have the same hiatus behavior as accents.)
 %    \begin{macrocode}
-    \cs_new:Npn \@@_change_case_upper_el:nnN #1#2#3
+    \cs_new:Npn \@@_change_case_upper_el:NnnN #1#2#3#4
+      {
+        \token_if_cs:NTF #4
+          {
+            \@@_change_case_store:e { \char_uppercase:N #1 }
+            \@@_change_case_loop:nnw {#2} {#3} #4
+          }
+          {
+            \int_compare:nNnTF { `#4 } = { "0308 }
+              { \@@_change_case_upper_el_dialytika:nnN {#2} {#3} #1 }
+              {
+                 \@@_change_case_if_greek_accent:nTF { `#4 }
+                  { \@@_change_case_upper_el_hiatus:nnNw {#2} {#3} #1 }
+                  {
+                    \@@_change_case_if_greek_diacritic:nTF { `#4 }
+                      {
+                        \@@_change_case_store:e { \char_uppercase:N #1 }
+                        \@@_change_case_loop:nnw {#2} {#3}
+                      }
+                      {
+                        \@@_change_case_store:e { \char_uppercase:N #1 }
+                        \@@_change_case_loop:nnw {#2} {#3} #4
+                      }
+                  }
+              }
+          }
+      }
+%    \end{macrocode}
+%   We handle \emph{dialytika} in parts as it's also needed for the hiatus.
+%   We know only two letters take it, so we can shortcut here on the second
+%   part of the tests.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_change_case_upper_el_dialytika:nnN #1#2#3
+      {
+        \@@_change_case_if_takes_dialytika:nTF { `#3 }
+          { \@@_change_case_upper_el_dialytika:N #3 }
+          { \@@_change_case_store:e { \char_uppercase:N #3 } }
+        \@@_change_case_upper_el_gobble:nnw {#1} {#2}
+      }
+    \cs_new:Npn \@@_change_case_upper_el_dialytika:N #1
+      {
+        \@@_change_case_store:e
+          {
+            \bool_lazy_or:nnTF
+              { \int_compare_p:nNn { `#1 } = { "0399 } }
+              { \int_compare_p:nNn { `#1 } = { "03B9 } }
+              { \char_generate:nn { "03AA } { \@@_char_catcode:N #1 } }
+              { \char_generate:nn { "03AB } { \@@_char_catcode:N #1 } }
+          }
+      }
+%    \end{macrocode}
+%   Adding a hiatus needs some of the same ideas, but if there is not one we
+%   skip this code point, hence needing a separate function.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_change_case_upper_el_hiatus:nnNw
+      #1#2#3#4 \q__text_recursion_stop
+      {
+        \@@_change_case_store:e { \char_uppercase:N #3 }
+        \tl_if_head_is_N_type:nTF {#4}
+          { \@@_change_case_upper_el_hiatus:nnN }
+          { \@@_change_case_loop:nnw }
+            {#1} {#2} #4 \q__text_recursion_stop
+      }
+    \cs_new:Npn \@@_change_case_upper_el_hiatus:nnN #1#2#3
       {
         \token_if_cs:NTF #3
           { \@@_change_case_loop:nnw {#1} {#2} #3 }
           {
-            \int_compare:nNnTF { `#3 } = { "0308 }
+            \@@_change_case_if_takes_dialytika:nTF { `#3 }
               {
-                \@@_change_case_store:n {#3}
-                \@@_change_case_upper_el_loop:nnw {#1} {#2}
+                \@@_change_case_upper_el_dialytika:N #3
+                \@@_change_case_upper_el_gobble:nnw {#1} {#2}
               }
-              {
-                \bool_lazy_any:nTF
-                  {
-                    { \int_compare_p:nNn { `#3 } = { "0300 } }
-                    { \int_compare_p:nNn { `#3 } = { "0301 } }
-                    { \int_compare_p:nNn { `#3 } = { "0304 } }
-                    { \int_compare_p:nNn { `#3 } = { "0306 } }
-                    { \int_compare_p:nNn { `#3 } = { "0308 } }
-                    { \int_compare_p:nNn { `#3 } = { "0313 } }
-                    { \int_compare_p:nNn { `#3 } = { "0314 } }
-                    { \int_compare_p:nNn { `#3 } = { "0342 } }
-                    { \int_compare_p:nNn { `#3 } = { "0340 } }
-                    { \int_compare_p:nNn { `#3 } = { "0341 } }
-                    { \int_compare_p:nNn { `#3 } = { "0343 } }
-                  }
-                  { \@@_change_case_upper_el_loop:nnw {#1} {#2} }
-                  {
-                    \int_compare:nNnTF { `#3 } = { "0344 }
-                      {
-                        \@@_change_case_store:e
-                          {
-                            \char_generate:nn { "0308 }
-                              { \@@_char_catcode:N #3 }
-                          }
-                        \@@_change_case_upper_el_loop:nnw {#1} {#2}
-                      }
-                      {
-                        \int_compare:nNnTF { `#3 } = { "0345 }
-                          { \@@_change_case_loop:nnw {#1} {#2} }
-                          { \@@_change_case_loop:nnw {#1} {#2} #3 }
-                      }
-                  }
-              }
+              { \@@_change_case_loop:nnw {#1} {#2} #3 }
           }
       }
+%    \end{macrocode}
+%   For clearing out trailing combining marks after we have dealt with
+%   the first one.
+%    \begin{macrocode}
+    \cs_new:Npn \@@_change_case_upper_el_gobble:nnw
+      #1#2#3 \q__text_recursion_stop
+      {
+        \tl_if_head_is_N_type:nTF {#3}
+          { \@@_change_case_upper_el_gobble:nnN }
+          { \@@_change_case_loop:nnw }
+            {#1} {#2} #3 \q__text_recursion_stop
+      }
+    \cs_new:Npn \@@_change_case_upper_el_gobble:nnN #1#2#3
+      {
+        \bool_lazy_or:nnTF
+          { \token_if_cs_p:N #3 }
+          {
+            ! \bool_lazy_or_p:nn
+              { \@@_change_case_if_greek_accent_p:n { `#3 } }
+              { \@@_change_case_if_greek_diacritic_p:n { `#3 } }
+          }
+          { \@@_change_case_loop:nnw {#1} {#2} #3 }
+          { \@@_change_case_upper_el_gobble:nnw {#1} {#2} }
+      }
+%    \end{macrocode}
+%   Luckily the Greek range is limited and clear.
+%    \begin{macrocode}
     \prg_new_conditional:Npnn \@@_change_case_if_greek:n #1 { TF }
       {
         \if_int_compare:w #1 < "0370 \exp_stop_f:
@@ -861,8 +933,93 @@
           \fi:
         \fi:
       }
+%    \end{macrocode}
+%   We follow ICU in adding a few extras to the accent list here.
+%    \begin{macrocode}
+    \prg_new_conditional:Npnn \@@_change_case_if_greek_accent:n #1 { TF , p }
+      {
+        \if_int_compare:w #1 = "0300 \exp_stop_f:
+          \prg_return_true:
+        \else:
+          \if_int_compare:w #1 = "0301 \exp_stop_f:
+            \prg_return_true:
+          \else:
+            \if_int_compare:w #1 = "0342 \exp_stop_f:
+              \prg_return_true:
+            \else:
+              \if_int_compare:w #1 = "0302 \exp_stop_f:
+                \prg_return_true:
+              \else:
+                \if_int_compare:w #1 = "0303 \exp_stop_f:
+                  \prg_return_true:
+                \else:
+                  \if_int_compare:w #1 = "0311 \exp_stop_f:
+                    \prg_return_true:
+                  \else:
+                    \prg_return_false:
+                  \fi:
+                \fi:
+              \fi:
+            \fi:
+          \fi:
+        \fi:
+      }
+    \prg_new_conditional:Npnn \@@_change_case_if_greek_diacritic:n
+      #1 { TF , p }
+      {
+        \if_int_compare:w #1 = "0304 \exp_stop_f:
+          \prg_return_true:
+        \else:
+          \if_int_compare:w #1 = "0306 \exp_stop_f:
+            \prg_return_true:
+          \else:
+            \if_int_compare:w #1 = "0313 \exp_stop_f:
+              \prg_return_true:
+            \else:
+              \if_int_compare:w #1 = "0314 \exp_stop_f:
+                \prg_return_true:
+              \else:
+                \if_int_compare:w #1 = "0343 \exp_stop_f:
+                  \prg_return_true:
+                \else:
+                  \prg_return_false:
+                \fi:
+              \fi:
+            \fi:
+          \fi:
+        \fi:
+      }
+    \prg_new_conditional:Npnn \@@_change_case_if_takes_dialytika:n #1 { TF }
+      {
+        \if_int_compare:w #1 = "0399 \exp_stop_f:
+          \prg_return_true:
+        \else:
+          \if_int_compare:w #1 = "03B9 \exp_stop_f:
+            \prg_return_true:
+          \else:
+            \if_int_compare:w #1 = "03A5 \exp_stop_f:
+              \prg_return_true:
+            \else:
+              \if_int_compare:w #1 = "03C5 \exp_stop_f:
+                \prg_return_true:
+              \else:
+                \prg_return_false:
+              \fi:
+            \fi:
+          \fi:
+        \fi:
+       }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
