Enable handling of eta-acute in Greek uppercasing
There is now only one line left in the ICU tests that fails:
I am waiting for input from a Greek expert on whether it's even right!

--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -299,6 +299,7 @@
   }
   {
     \@@_change_case_store:n { ~ }
+    \cs_if_exist_use:c { @@_change_case_space_ #1 _ #2 :w }
     \@@_change_case_loop:nnw {#1} {#2}
   }
 %    \end{macrocode}
@@ -795,7 +796,7 @@
 %   is whether after that we have another character token, either from the NFD or
 %   directly in the input. If not, we store the changed character at this stage.
 %    \begin{macrocode}
-    \cs_new:Npn \@@_change_case_upper_el:nnNw #1#2#3#4 \q__text_recursion_stop
+    \cs_new:Npn \@@_change_case_upper_el:nnNw #1#2#3#4 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#4}
           { \@@_change_case_upper_el:NnnN #3 }
@@ -803,7 +804,7 @@
             \@@_change_case_store:e { \char_uppercase:N #3 }
             \@@_change_case_loop:nnw
           }
-            {#1} {#2} #4 \q__text_recursion_stop
+            {#1} {#2} #4 \q_@@_recursion_stop
       }
 %    \end{macrocode}
 %   Now, we check the detail of the next codepoint: again we filter out the
@@ -865,13 +866,13 @@
 %   skip this code point, hence needing a separate function.
 %    \begin{macrocode}
     \cs_new:Npn \@@_change_case_upper_el_hiatus:nnNw
-      #1#2#3#4 \q__text_recursion_stop
+      #1#2#3#4 \q_@@_recursion_stop
       {
         \@@_change_case_store:e { \char_uppercase:N #3 }
         \tl_if_head_is_N_type:nTF {#4}
           { \@@_change_case_upper_el_hiatus:nnN }
           { \@@_change_case_loop:nnw }
-            {#1} {#2} #4 \q__text_recursion_stop
+            {#1} {#2} #4 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_upper_el_hiatus:nnN #1#2#3
       {
@@ -891,12 +892,12 @@
 %   the first one.
 %    \begin{macrocode}
     \cs_new:Npn \@@_change_case_upper_el_gobble:nnw
-      #1#2#3 \q__text_recursion_stop
+      #1#2#3 \q_@@_recursion_stop
       {
         \tl_if_head_is_N_type:nTF {#3}
           { \@@_change_case_upper_el_gobble:nnN }
           { \@@_change_case_loop:nnw }
-            {#1} {#2} #3 \q__text_recursion_stop
+            {#1} {#2} #3 \q_@@_recursion_stop
       }
     \cs_new:Npn \@@_change_case_upper_el_gobble:nnN #1#2#3
       {
@@ -1022,6 +1023,63 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+% \begin{macro}[EXP]{\@@_change_case_space_upper_el:Nnnw}
+% \begin{macro}[EXP]{\@@_change_case_space_upper_el:nnN}
+% \begin{macro}[EXP]{\@@_change_case_space_upper_el:nnNw}
+% \begin{macro}[EXP]{\@@_change_case_space_upper_el:NnnN}
+%   There is one special case in Greek that needs to be picked up based on
+%   being an isolated letter. We do that using a test similar to final sigma,
+%   but it has to fire off from the space grabber.
+%    \begin{macrocode}
+\bool_lazy_or:nnT
+  { \sys_if_engine_luatex_p: }
+  { \sys_if_engine_xetex_p: }
+  {
+    \cs_new:Npn \@@_change_case_space_upper_el:Nnnw
+      #1#2#3#4 \q_@@_recursion_stop
+      {
+        \tl_if_head_is_N_type:nTF {#4}
+          { \@@_change_case_space_upper_el:nnN }
+          { \@@_change_case_loop:nnw }
+            {#2} {#3} #4 \q_@@_recursion_stop
+      }
+    \cs_new:Npn \@@_change_case_space_upper_el:nnN #1#2#3
+      {
+        \bool_lazy_or:nnTF
+          { \token_if_cs_p:N #3 }
+          { ! \int_compare_p:nNn { `#3 } = { "03AE } }
+          { \@@_change_case_loop:nnw }
+          { \@@_change_case_space_upper_el:nnNw }
+            {#1} {#2} #3
+      }
+    \cs_new:Npn \@@_change_case_space_upper_el:nnNw
+      #1#2#3#4 \q_@@_recursion_stop
+       {
+        \tl_if_head_is_N_type:nTF {#4}
+          { \@@_change_case_space_upper_el:NnnN #3 }
+          {
+            \@@_change_case_store:e
+              { \char_generate:nn { "0389 } { \@@_char_catcode:N #3 } }
+            \@@_change_case_loop:nnw
+          }
+            {#1} {#2} #4 \q_@@_recursion_stop
+      }
+    \cs_new:Npn \@@_change_case_space_upper_el:NnnN #1#2#3#4
+      {
+        \token_if_letter:NTF #4
+          { \@@_change_case_loop:nnw {#2} {#3} #1#4 }
+          {
+            \@@_change_case_store:e
+              { \char_generate:nn { "0389 } { \@@_char_catcode:N #1 } }
+            \@@_change_case_loop:nnw {#2} {#3} #4
+          }
+      }
+  }
+%    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
