--- a/l3kernel/l3text-case.dtx
+++ b/l3kernel/l3text-case.dtx
@@ -299,7 +299,7 @@
   }
   {
     \@@_change_case_store:n { ~ }
-    \cs_if_exist_use:c { @@_change_case_space_ #1 _ #2 :w }
+    \cs_if_exist_use:c { @@_change_case_space_ #1 _ #2 :Nnnw }
     \@@_change_case_loop:nnw {#1} {#2}
   }
 %    \end{macrocode}
