Fix typos and code style

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2060,10 +2060,7 @@
       }
     \group_align_safe_end:
   }
-\cs_new:Npn \@@_replace_next_aux:w
-  {
-    \@@_replace_next:w {} {}
-  }
+\cs_new:Npn \@@_replace_next_aux:w { \@@_replace_next:w { } { } }
 \cs_new_eq:NN \@@_replace_wrap:w ?
 \cs_new_eq:NN \@@_replace_next:w ?
 %    \end{macrocode}
@@ -3176,7 +3173,7 @@
 %   }
 % \begin{macro}[EXP]{\@@_use_none_delimit_by_q_act_stop:w}
 %   To help control the expansion, \cs{@@_act:NNNnn} should always
-%   be proceeded by \cs{exp:w} and ends by producing \cs{exp_end:}
+%   be preceeded by \cs{exp:w} and ends by producing \cs{exp_end:}
 %   once the result has been obtained. This way no internal token of it can be
 %   accidentally end up in the input stream.
 %   Because \cs{s_@@_act_stop} can't appear without braces around it in the
