--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3252,10 +3252,10 @@
 %   avoids losing outer braces. The result is stored as an argument for the
 %   dummy function \cs{@@_act_result:n}.
 %    \begin{macrocode}
-\exp_args:Nno \use:n { \cs_new:Npn \@@_act:NNNnn #1#2#3#4#5 }
+\cs_new:Npn \@@_act:NNNnn #1#2#3#4#5
   {
-    \exp_after:wN \group_align_safe_begin:
-    \@@_act_loop:w #5 {\s_@@_act_stop} ? \s_@@_act_stop
+    \group_align_safe_begin:
+    \@@_act_loop:w #5 { \s_@@_act_stop } ? \s_@@_act_stop
     {#4} #1 #3 #2
     \@@_act_result:n { }
   }
@@ -3291,11 +3291,11 @@
 %   this is needed by \cs{@@_act:NNNnn} when changing case (to record
 %   which direction the change is in), but not when reversing the tokens.
 %    \begin{macrocode}
-\exp_args:Nno \use:n { \cs_new:Npn \tl_reverse:n #1 }
+\cs_new:Npn \tl_reverse:n #1
   {
-    \exp_after:wN \__kernel_exp_not:w \exp_after:wN \exp_after:wN \exp_after:wN
+    \__kernel_exp_not:w \exp_after:wN
       {
-        \exp_after:wN \exp:w
+        \exp:w
         \@@_act:NNNnn
           \@@_reverse_normal:nN
           \@@_reverse_group_preserve:nn
