--- a/l3kernel/doc/source3body.tex
+++ b/l3kernel/doc/source3body.tex
@@ -192,10 +192,22 @@ following argument specifiers:
     \emph{weird} arguments. This covers everything else, but mainly
     applies to delimited values (where the argument must be terminated
     by some specified string).
-  \item[\texttt{D}] The \texttt{D} specifier means \emph{do not use}.
+  \item[\texttt{D}] The \texttt{D} stands for \textbf{Do not use}.
     All of the \TeX{} primitives are initially \cs{let} to a \texttt{D}
-    name, and some are then given a second name.  Only the kernel
-    team should use anything with a \texttt{D} specifier!
+    name, and some are then given a second name.
+    These functions have no standardized syntax, they are engine
+    dependent and their name can change without warning, thus their
+    use is \emph{strongly discouraged} in package code: programmers
+    should instead use the interfaces documented in
+    \href{interface3.pdf}{interface3.pdf}%^^A
+    \footnote{If a primitive offers a functionality not yet in the
+      kernel, programmers and users are encouraged to write to the
+      \texttt{LaTeX-L} mailing list
+      (\url{mailto:LATEX-L@listserv.uni-heidelberg.de}) describing
+      their use-case and intended behaviour, so that a possible
+      interface can be discussed.  Temporarily, while an interface is
+      not provided, programmers may use the procedure described in the
+      \href{l3styleguide.pdf}{l3styleguide.pdf}.}.
 \end{description}
 Notice that the argument specifier describes how the argument is
 processed prior to being passed to the underlying function. For example,
