--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2992,7 +2992,7 @@
         \tl_if_head_is_N_type:nTF { #1 ? }
           {
             \exp_after:wN \exp_not:N
-            \@@_tl_head:w #1 { ? \use_none:n } \s_@@_stop
+            \@@_tl_head:w #1 { ? \use_none:nn } \s_@@_stop
           }
           { \str_head:n {#1} }
       \prg_return_true:
@@ -3019,7 +3019,7 @@
         \tl_if_head_is_N_type:nTF { #1 ? }
           {
             \exp_after:wN \exp_not:N
-            \@@_tl_head:w #1 { ? \use_none:n } \s_@@_stop
+            \@@_tl_head:w #1 { ? \use_none:nn } \s_@@_stop
           }
           {
             \tl_if_head_is_group:nTF {#1}
