--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -634,6 +634,8 @@
 % \begin{macro}[EXP]{\@@_expand_protect:N}
 % \begin{macro}[EXP]{\@@_expand_protect:nN}
 % \begin{macro}[EXP]{\@@_expand_protect:Nw}
+% \begin{macro}[EXP]{\@@_expand_testopt:N}
+% \begin{macro}[EXP]{\@@_expand_testopt:NNn}
 % \begin{macro}[EXP]{\@@_expand_replace:N}
 % \begin{macro}[EXP]{\@@_expand_replace:n}
 % \begin{macro}[EXP]{\@@_expand_cs_expand:N}
@@ -917,7 +919,8 @@
 %   \LaTeXe{}'s \cs{protect} makes life interesting. Where possible, we
 %   simply remove it and replace with the \enquote{parent} command; of course,
 %   the \cs{protect} might be explicit, in which case we need to leave it alone
-%   if it's required.
+%   if it's required. There is also the case of a straight \tn{@protected@testopt}
+%   to cover.
 %    \begin{macrocode}
 \cs_new:Npx \@@_expand_cs:N #1
   {
@@ -927,7 +930,7 @@
         \bool_lazy_and:nnTF
           { \cs_if_exist_p:N \fmtname }
           { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
-          { \exp_not:N \@@_expand_encoding:N #1 }
+          { \exp_not:N \@@_expand_testopt:N #1 }
           { \exp_not:N \@@_expand_replace:N #1 }
       }
   }
@@ -947,6 +950,17 @@
           { \@@_expand_store:n { \protect #1 } }
       }
       { \@@_expand_store:n { \protect #1 } }
+    \@@_expand_loop:w
+  }
+\cs_new:Npn \@@_expand_testopt:N #1
+  {
+    \str_if_eq:nnTF {#1} { \@protected@testopt }
+      { \@@_expand_testopt:NNn }
+      { \@@_expand_encoding:N #1 }
+  }
+\cs_new:Npn \@@_expand_testopt:NNn #1#2#3
+  {
+    \@@_expand_store:n {#1}
     \@@_expand_loop:w
   }
 %    \end{macrocode}
@@ -1007,6 +1021,8 @@
     \@@_expand_loop:w
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
