--- a/l3kernel/l3text-purify.dtx
+++ b/l3kernel/l3text-purify.dtx
@@ -396,7 +396,7 @@
     \tiny
   }
   { \text_declare_purify_equivalent:Nn #1 { } }
-\exp_args:Nc \text_declare_purify_equivalent:cn
+\exp_args:Nc \text_declare_purify_equivalent:Nn
   { @protected@testopt } { \use_none:nnn }
 %    \end{macrocode}
 % Environments have to be handled by pure expansion.
