--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -1043,7 +1043,9 @@
   {
 %    \end{macrocode}
 %   The variant using \cs{tex_expanded:D} can just iterate over the
-%   \meta{property list} and remove the leading comma afterwards.
+%   \meta{property list} and remove the leading comma afterwards. Only the value
+%   has to be protected in \cs{exp_not:n} as the property name is always a
+%   string.
 %    \begin{macrocode}
     \cs_new:Npn \prop_to_keyval:N #1
       {
@@ -1061,7 +1063,7 @@
     \cs_new:Npn \@@_to_keyval_aux:w ,
       { \exp_after:wN { \if_false: } \fi: }
     \cs_new:Npn \@@_to_keyval_aux:nn #1#2
-      { , \exp_not:n { #1 =~ {#2} } }
+      { , #1 =~ { \exp_not:n {#2} } }
   }
 %    \end{macrocode}
 %   The other variant will iterate over the \meta{property list} and has to
