Simpler code for setting \c__kernel_expl_date_tl

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1083,13 +1083,10 @@
 %    \begin{macrocode}
 %<*2ekernel|generic>
 \begingroup
-  \catcode`\>=12
-  \def\aux#1>{}
-  \def\auxi{c__kernel_expl_date_tl}%
-  \edef\auxi{\expandafter\aux\meaning\auxi}%
+  \catcode`\_=11
   \expandafter
-  \ifx\csname\auxi\endcsname\relax
-    \global\expandafter\let\csname\auxi\endcsname\ExplFileDate
+  \ifx\csname c__kernel_expl_date_tl\endcsname\relax
+    \global\let\c__kernel_expl_date_tl\ExplFileDate
   \fi
 \endgroup
 %</2ekernel|generic>
