Load-order safe \rule equivalent for l3coffins
See also comments in xbox.

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -2275,11 +2275,10 @@
 % \begin{macro}{\@@_rule:nn}
 %   Abstract out creation of rules here until there is a higher-level interface.
 %    \begin{macrocode}
-\cs_new_protected:Npx \@@_rule:nn #1#2
+\cs_new_protected:Npn \@@_rule:nn #1#2
   {
-    \cs_if_exist:NTF \rule
-      { \exp_not:N \rule {#1} {#2} }
-      { \hbox:n { \tex_vrule:D width #1 height #2 \scan_stop: } }
+    \mode_leave_vertical:
+    \hbox:n { \tex_vrule:D width #1 height #2 \scan_stop: }
   }
 %    \end{macrocode}
 % \end{macro}
