--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -2239,15 +2239,12 @@
 %   flexible.
 %    \begin{macrocode}
 \tl_new:N  \l_@@_display_font_tl
-\cs_if_exist:NTF \AtBeginDocument
-  { \AtBeginDocument }
-  { \use:n }
+\bool_lazy_and:nnT
+  { \cs_if_exist_p:N \fmtname }
+  { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
   {
-    \__kernel_tl_set:Nx \l_@@_display_font_tl
-      {
-        \cs_if_exist:NT \sffamily { \exp_not:N \sffamily }
-        \cs_if_exist:NT \tiny { \exp_not:N \tiny }
-      }
+    \__kernel_tl_set:Nn \l_@@_display_font_tl
+      { \sffamily \tiny }
   }
 %    \end{macrocode}
 % \end{variable}
@@ -2255,17 +2252,21 @@
 % \begin{macro}{\@@_color:n}
 %   Calls \tn{color}, and otherwise does nothing if \tn{color} is not defined.
 %    \begin{macrocode}
-\cs_if_exist:NTF \AtBeginDocument
-  { \AtBeginDocument }
-  { \use:n }
+\cs_new_protected:Npn \@@_color:n #1 {#1}
+\bool_lazy_and:nnT
+  { \cs_if_exist_p:N \fmtname }
+  { \str_if_eq_p:Vn \fmtname { LaTeX2e } }
   {
-    \cs_new_protected:Npx \@@_color:n #1
+    \AtBeginDocument
       {
-        \cs_if_exist:NTF \color_select:n
-          { \color_select:n {#1} }
+        \cs_gset_protected:Npx \@@_color:n #1
           {
-            \cs_if_exist:NT \color
-              { \exp_not:N \color {#1} }
+            \cs_if_exist:NTF \color_select:n
+              { \color_select:n {#1} }
+              {
+                \cs_if_exist:NT \color
+                  { \exp_not:N \color {#1} }
+              }
           }
       }
   }
