Re-arrange a guard

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -212,7 +212,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<*dvisvgm|dvips>
+%<*dvips|dvisvgm>
 %    \end{macrocode}
 %
 % \begin{macro}
@@ -250,7 +250,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvisvgm|dvips>
+%</dvips|dvisvgm>
 %    \end{macrocode}
 %
 % \subsubsection{\LuaTeX{} and \pdfTeX{}}
