Track PDF resource management changes
Ideally this will get folded back to the main repo soon!

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -738,7 +738,7 @@
       }
     \use:x
       {
-        \pdfcoredict_gput:nnn
+        \pdfmanagement_add:nnn
           { Page / Resources / ColorSpace }
           { color \int_use:N \g_@@_model_int }
           { \pdf_object_last: }
@@ -825,7 +825,7 @@
       }
     \use:x
       {
-        \pdfcoredict_gput:nnn
+        \pdfmanagement_add:nnn
           { Page / Resources / ColorSpace }
           { color \int_use:N \g_@@_model_int }
           { \pdf_object_last: }
