--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -255,7 +255,7 @@
         \tex_pdfextension:D colorstackinit ~
 %</luatex>
 %<*pdftex>
-        \tex_pdfcolorstackinit
+        \tex_pdfcolorstackinit:D
 %</pdftex>
         \tl_if_blank:nF {#2} { #2 ~ }
         {#3}
