--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -249,7 +249,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_color_stack_init:Nnn #1#2#3
   {
-    \int_set:Nn #1
+    \int_gset:Nn #1
       {
 %<*luatex>
         \tex_pdfextension:D colorstackinit ~
