Tidy up backend selection
This gets swept up later, but it's better to have the
current names from the word go.

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -975,10 +975,14 @@ end
     \__kernel_tl_gset:Nx \g_@@_backend_tl
       {
         \sys_if_engine_xetex:TF
-          { xdvipdfmx }
+          { xetex }
           {
              \sys_if_output_pdf:TF
-              { pdfmode }
+              {
+                \sys_if_engine_pdftex:TF
+                  { pdftex }
+                  { luatex }
+              }
               { dvips }
            }
       }
