new messages for l3bitset

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1971,6 +1971,9 @@
         {#4} { :~base~form~is~already~a~variant. }
       } { . }
   }
+\__kernel_msg_new:nnn { kernel } { bitset-unknown-key }
+  { The~key~'#2'~is~unknown~for~bitset~\tl_to_str:n {#1} }
+
 %    \end{macrocode}
 %
 % Some errors are only needed in package mode if debugging is enabled by
@@ -2050,6 +2053,12 @@
       }
     streams~are~
     \tl_if_empty:nTF {#2} { open } { in~use: #2 . }
+  }
+\__kernel_msg_new:nnn { kernel } { show-bitset }
+  {
+    The~bitset~#1~has~the~representation: \\
+    >~binary:~#2  \\
+    >~arabic:~#3 .
   }
 %    \end{macrocode}
 %
