handle negative indices ...

--- a/l3kernel/l3bitset.dtx
+++ b/l3kernel/l3bitset.dtx
@@ -404,9 +404,15 @@
 %   }
 %    \begin{macrocode}
 \cs_new:Npn \bitset_index:Nn #1 #2
- {
-   \int_eval:n { \str_item:Nn #1 { 0 - (#2)} + 0 }
- }
+  {
+    \int_compare:nNnTF { #2 } > { 0 }
+      {
+        \int_eval:n { \str_item:Nn #1 { 0 - (#2)} + 0 }
+      }
+      {
+        0
+      }
+  }
 \cs_generate_variant:Nn \bitset_index:Nn {cn}
 %    \end{macrocode}
 % \end{macro}
