extend bitset_to_arabic to larger values with fp_eval

--- a/l3kernel/l3bitset.dtx
+++ b/l3kernel/l3bitset.dtx
@@ -145,8 +145,9 @@
 %   \end{syntax}
 % This leaves the current value of the bitset expressed as
 % a decimal number in the input stream. If no bit has been set yet,
-% the output is zero. The function uses \cs{int_from_bin:n}, so it
-% can only be used with a bitset whose value is smaller than $2^{31}-1$.
+% the output is zero. The function uses \cs{int_from_bin:n} if largest
+% index that have been set or unset is smaller then 32, and a slower implementation
+% based on \cs{fp_eval} otherwise.
 % \end{function}
 %
 %
@@ -392,13 +393,24 @@
 %     \bitset_to_bin:N,    \bitset_to_bin:c,
 %   }
 %   The naming of the commands follow the names in the \texttt{int} module.
-%   \cs{bitset_to_arabic:N} uses \cs{int_from_bin:n} and so can only handle small
-%   numbers. There is no test for the string length, so that long bitset with
-%   many leading zeros work nevertheless.
+%   \cs{bitset_to_arabic:N} uses \cs{int_from_bin:n} if the string is shorter
+%   then 32 and  the slower \cs{fp_eval} for larger bitsets.
+%
 %    \begin{macrocode}
 \cs_new:Npn \bitset_to_arabic:N #1
   {
-    \exp_args:Ne \int_from_bin:n { #1 }
+    \int_compare:nNnTF { \str_count:N #1 } < {32}
+      { \exp_args:No \int_from_bin:n {#1} }
+      {
+        \exp_after:wN \@@_to_int:nN \exp_after:wN 0
+        #1 \q_recursion_tail \q_recursion_stop
+      }
+  }
+
+\cs_new:Npn \@@_to_int:nN #1#2
+  {
+    \quark_if_recursion_tail_stop_do:Nn #2 {#1}
+    \exp_args:Nf \@@_to_int:nN { \fp_eval:n { #1 * 2 + #2 } }
   }
 
 \cs_new:Npn \bitset_to_bin:N #1
@@ -446,10 +458,8 @@
         #1 { LaTeX/kernel } { show-bitset }
            { \token_to_str:N #2 }
            { \bitset_to_bin:N #2  }
-           { \int_compare:nNnTF { \str_count:N #2 } < {32}
-               { \bitset_to_arabic:N #2  }
-               {---bitset~is~to~long~to~show~it--- }
-           } { }
+           { \bitset_to_arabic:N #2  }
+           { }
       }
   }
 
