use prg_replicate instead of int_step to fill up with 0

--- a/l3kernel/l3bitset.dtx
+++ b/l3kernel/l3bitset.dtx
@@ -295,10 +295,8 @@
         \int_compare:nNnTF {\str_count:N #1 } < { #2  }
           {
             %extend the str
-            \int_step_inline:nn { #2 - \str_count:N #1 -1 }
-              {
-                \str_put_left:Nn #1 { 0 }
-              }
+            \exp_args:NNe
+            \str_put_left:Nn #1 { \prg_replicate:nn {  #2 - \str_count:N #1 -1 } {0} }
             \str_put_left:Nn #1 { 1 }
           }
           {
@@ -320,11 +318,9 @@
       {
         \int_compare:nNnTF {\str_count:N #1 } < { #2  }
           {
-            %extend the str
-            \int_step_inline:nn { #2 - \str_count:N #1 -1}
-              {
-                \str_gput_left:Nn #1 { 0 }
-              }
+          %  %extend the str
+            \exp_args:NNe
+            \str_gput_left:Nn #1 { \prg_replicate:nn {  #2 - \str_count:N #1 -1 } {0} }
             \str_gput_left:Nn #1 { 1 }
           }
           {
