correct docu for arabic

--- a/l3kernel/l3bitset.dtx
+++ b/l3kernel/l3bitset.dtx
@@ -57,11 +57,12 @@
 % package are implemented here, mainly the functions needed to use bitsets in
 % PDF dictionaries.
 %
-% The bitset is stored as a string and so the vector size is theoretically
-% unlimited, only restricted by \TeX-memory, but the export function
-% \cs{bitset_to_arabic:N} uses a function from the \texttt{int} module and
-% so the length is practically restricted to values smaller than 31 if this
-% output is needed.
+% The bitset is stored as a string (but one shouldn't rely on the internal
+% representation) and so the vector size is theoretically
+% unlimited, only restricted by \TeX-memory. But the export function
+% \cs{bitset_to_arabic:N} can use functions from the \texttt{int} module only if
+% the largest index used for this bitset is smaller then 32, for longer
+% bitsets \texttt{fp} is used and this is slower.
 %
 % \section{Creating bitsets}
 % \begin{function}[added = 2020-12-13]
@@ -76,7 +77,8 @@
 %  \texttt{1}'s and \texttt{0}'s.
 %  The rightmost number is the index position 1, so
 %  the string variable can be viewed directly as the binary number.
-%
+%  But one shouldn't rely on the internal representation, but use the
+%  dedicated \cs{bitset_to_bin:N} instead to get the binary number.
 % \end{function}
 %
 % \begin{function}[EXP, pTF,added = 2020-12-14]
@@ -145,7 +147,7 @@
 %   \end{syntax}
 % This leaves the current value of the bitset expressed as
 % a decimal number in the input stream. If no bit has been set yet,
-% the output is zero. The function uses \cs{int_from_bin:n} if largest
+% the output is zero. The function uses \cs{int_from_bin:n} if the largest
 % index that have been set or unset is smaller then 32, and a slower implementation
 % based on \cs{fp_eval} otherwise.
 % \end{function}
