correct docu about max length

--- a/l3experimental/l3bitset/l3bitset.dtx
+++ b/l3experimental/l3bitset/l3bitset.dtx
@@ -59,7 +59,10 @@
 %
 % The bitset is stored as a string (but one shouldn't rely on the internal
 % representation) and so the vector size is theoretically
-% unlimited, only restricted by \TeX-memory. But the export function
+% unlimited, only restricted by \TeX-memory. But the functions to set and clear
+% bits uses integer functions for the index so bitsets can't be longer
+% than $2^{31} −1$.
+% The export function
 % \cs{bitset_to_arabic:N} can use functions from the \texttt{int} module only if
 % the largest index used for this bitset is smaller then 32, for longer
 % bitsets \texttt{fp} is used and this is slower.
